--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/uuallis/Java-Command-Line-Calculator"
+    "url": "https://github.com/uuallis/Java-Command-Line-Calculator"
   },
   "keywords": [],
   "author": "",
